Updated namespaces for all db files

--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/mysql-db.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/mysql-db.yaml
@@ -17,6 +17,7 @@ kind: StatefulSet
 apiVersion: apps/v1
 metadata:
   name: mysql-db
+  namespace: tenant-a
   labels:
     app: mysql-db
     tier: db
