--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/mysql-db.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/mysql-db.yaml
@@ -66,6 +66,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-db
+  namespace: tenant-a
   labels:
     app: mysql-db
     tier: db
@@ -86,6 +87,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-db-config
+  namespace: tenant-a
   labels:
     app: mysql-db
 data:
