--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/release/payments.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/release/payments.yaml
@@ -18,6 +18,8 @@ kind: Deployment
 metadata:
   name: payments
   namespace: tenant-a
+  annotations:
+    configsync.gke.io/cluster-name-selector: edge-central1  
 spec:
   selector:
     matchLabels:
