--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/payments-svc.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/payments-svc.yaml
@@ -16,6 +16,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    configsync.gke.io/cluster-name-selector: edge-central1  
   name: payments-svc
   namespace: tenant-a
 spec:
