--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/springprofile-mysql.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/springprofile-mysql.yaml
@@ -21,6 +21,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    configsync.gke.io/cluster-name-selector: edge-central1
   name: spring-profile
   namespace: tenant-a
 data:
