--- a/configsync/all-clusters/clusteradminrb.yaml
+++ b/configsync/all-clusters/clusteradminrb.yaml
@@ -3,7 +3,7 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     owner: platform-team
-  name: namespace-viewer
+  name: clusteradminuser
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
