--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/release/inventory.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/release/inventory.yaml
@@ -19,7 +19,8 @@ metadata:
   name: inventory
   namespace: tenant-a
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1  
+    configsync.gke.io/cluster-name-selector: edge-central1 
+    config.kubernetes.io/depends-on: apps/v1/namespaces/tenant-a/StatefulSet/mysql-db 
 spec:
   selector:
     matchLabels:
