--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/release/inventory.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/release/inventory.yaml
@@ -19,9 +19,10 @@ metadata:
   name: inventory
   namespace: tenant-a
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1 
-    config.kubernetes.io/depends-on: apps/namespaces/tenant-a/StatefulSet/mysql-db 
+    configsync.gke.io/cluster-name-selector: edge-central1
+    config.kubernetes.io/depends-on: apps/namespaces/tenant-a/StatefulSet/mysql-db
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: inventory
