--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/springprofile-mysql.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/springprofile-mysql.yaml
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1
+    configmanagement.gke.io/cluster-selector: selector-env-edge  
   name: spring-profile
   namespace: tenant-a
 data:
