--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/api-server-svc.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/api-server-svc.yaml
@@ -19,7 +19,7 @@ metadata:
   name: api-server-svc
   namespace: tenant-a
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1  
+    configmanagement.gke.io/cluster-selector: selector-env-edge
 spec:
   type: ClusterIP
   selector:
