--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/payments-svc.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/payments-svc.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1  
+    configmanagement.gke.io/cluster-selector: selector-env-edge  
   name: payments-svc
   namespace: tenant-a
 spec:
