--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/release/api-server.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/release/api-server.yaml
@@ -19,7 +19,8 @@ metadata:
   name: api-server
   namespace: tenant-a
   annotations:
-    configsync.gke.io/cluster-name-selector: edge-central1  
+    configmanagement.gke.io/cluster-selector: selector-env-edge
+    config.kubernetes.io/depends-on: apps/namespaces/tenant-a/StatefulSet/mysql-db
 spec:
   selector:
     matchLabels:
