--- a/configsync/all-clusters/namespaces/tenant-a/app-pos/common/service-configs.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-pos/common/service-configs.yaml
@@ -16,6 +16,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    configmanagement.gke.io/cluster-selector: selector-env-edge
   name: service-configs
   namespace: tenant-a
 data:
