--- a/configsync/all-clusters/namespaces/tenant-a/app-nginx/nginx.yaml
+++ b/configsync/all-clusters/namespaces/tenant-a/app-nginx/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: default
+  namespace: tenant-a
 spec:
   replicas: 3
   selector:
