--- a/configsync/all-clusters/policies/privilegecontainers.yaml
+++ b/configsync/all-clusters/policies/privilegecontainers.yaml
@@ -3,7 +3,7 @@ kind: K8sPSPAllowPrivilegeEscalationContainer
 metadata:
   name: psp-allow-privilege-escalation-container-sample
 spec:
-  enforcementAction: dryrun
+  enforcementAction: deny
   match:
     kinds:
     - apiGroups:
