Edited the HPA Constraint Template

--- a/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
+++ b/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
@@ -19,5 +19,5 @@ spec:
         package hpalimitreplicas
         violation[{"msg": msg}] {
           input.review.object.spec.maxReplicas > input.parameters.invalidMaxReplicas
-          msg := sprintf(" Replicas greater than maximum allowed limit")
+          msg := sprintf("Replicas greater than maximum allowed limit",input.review.object.spec.maxReplicas)
         }
