--- a/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
+++ b/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
@@ -10,14 +10,16 @@ spec:
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
-          properties:
-            invalidMaxReplicas:
-              type: integer
+          items:
+            type: object
+            properties:
+              maxReplicas:
+                type: integer
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package hpalimitreplicas
         violation[{"msg": msg}] {
-          input.review.object.spec.maxReplicas > input.parameters.invalidMaxReplicas
-          msg := sprintf("Replicas greater than maximum allowed limit",input.review.object.spec.maxReplicas)
+          input.review.object.spec.maxReplicas > input.parameters.maxReplicas
+          msg := sprintf("The replicas requested are greater than %v is allowed", [input.parameters.maxReplicas])
         }
