Changed hpa policy template

--- a/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
+++ b/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
@@ -20,6 +20,6 @@ spec:
       rego: |
         package hpalimitreplicas
         violation[{"msg": msg}] {
-          input.review.object.spec.maxReplicas > input.parameters.maxReplicas
+          input.spec.maxReplicas > input.parameters.maxReplicas
           msg := sprintf("The replicas requested are greater than %v is allowed", [input.parameters.maxReplicas])
         }
