Changed hpa policy template

--- a/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
+++ b/configsync/all-clusters/policies/hpalimitreplicas-template.yaml
@@ -10,6 +10,7 @@ spec:
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
+         properties:
           items:
             type: object
             properties:
