Policy changes for hpa

--- a/configsync/all-clusters/policies/k8shpalimit-template.yaml
+++ b/configsync/all-clusters/policies/k8shpalimit-template.yaml
@@ -19,8 +19,8 @@ spec:
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package hpalimitreplicas
+        package k8shpalimit
         violation[{"msg": msg}] {
-          input.spec.maxReplicas > input.parameters.maxReplicas
-          msg := sprintf("The replicas requested are greater than %v is allowed", [input.parameters.maxReplicas])
+          input.review.object.spec.maxReplicas > input.parameters.maxReplicas
+          msg := sprintf("The replicas requested are greater than %v", [input.parameters.maxReplicas])
         }
