Policy changes for hpa

--- a/configsync/all-clusters/policies/hpa-violation-constraint.yaml
+++ b/configsync/all-clusters/policies/hpa-violation-constraint.yaml
@@ -8,5 +8,5 @@ spec:
   enforcementAction: deny
   match:
     kinds:
-      - apiGroups: [""]
+      - apiGroups: ["autoscaling"]
         kinds: ["HorizontalPodAutoscaler"]
